# bradis

./: Cargo.toml  README.md
.github/workflows/: test.yml
ci/: check.sh  test.sh
src/: buffer.rs  bytes.rs  client.rs  command.rs  config.rs  db.rs  drop.rs  glob.rs  int_set.rs  lib.rs  linked_hash_set.rs  linked_list.rs  pack.rs  pubsub.rs  quicklist.rs  reply.rs  request.rs  reversible.rs  server.rs  skiplist.rs  slice.rs  spawn.rs  store.rs  time.rs
src/buffer/: array.rs
src/client/: addr.rs  id.rs  info.rs  replier.rs  reply_message.rs
src/command/: bitops.rs  client.rs  config.rs  db.rs  debug.rs  eval.rs  expire.rs  hash.rs  keys.rs  list.rs  pubsub.rs  set.rs  sorted_set.rs  string.rs
src/config/: error.rs  key.rs
src/db/: index.rs  key_ref.rs  raw.rs  value.rs
src/db/raw/: slice.rs  slice_ref.rs
src/db/value/: array_string.rs  hash.rs  list.rs  set.rs  sorted_set.rs  string.rs  string_slice.rs
src/help/: client.txt  command.txt  config.txt  object.txt  pubsub.txt
src/pack/: list.rs  map.rs  packable.rs  ref.rs  set.rs  sorted_set.rs  value.rs
src/pubsub/: subscriber.rs  subscribers.rs
src/reply/: bulk.rs  error.rs  status.rs
src/spawn/: futures.rs  tokio.rs
src/store/: blocking.rs  monitor.rs  watching.rs
tests/: bitops.nu  bradis.nu  client.nu  config.nu  db.nu  eval.nu  expire.nu  hash.nu  keys.nu  list.nu  multi.nu  no_tokio_runtime_test.rs  nu_test.rs  protocol.nu  pubsub.nu  server.nu  set.nu  sorted_set.nu  store.nu  string.nu
tests/test/: client.rs  command.rs  error.rs  mod.rs  nu_test.rs
tests/test/command/: client.rs  client_closed.rs  client_id.rs  read_value.rs  run.rs  run_inline.rs  test.rs
