[package]
name = "bradis"
authors = ["Brad Dunbar <dunbarb2@gmail.com>"]
description = "Brad is"
edition = "2021"
license = "MIT"
rust-version = "1.74.0"
version = "0.1.0"
resolver = "2"

[lib]
doctest = false

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
arrayvec = "0.7.6"
bytes = "1.10.0"
hashbrown = "0.15.2"
logos = "0.15.0"
ordered-float = "4.6.0"
piccolo = "0.3.3"
rand = "0.9.0"
respite = "0.3.8"
seq-macro = "0.3.5"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
triomphe = "0.1.14"

[dependencies.tokio]
version = "1.43.0"
features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
]

[dev-dependencies]
miette = { version = "7.5.0", features = ["fancy"] }
nu-cli = "0.102.0"
nu-cmd-extra = "0.102.0"
nu-cmd-lang = "0.102.0"
nu-command = "0.102.0"
nu-engine = "0.102.0"
nu-parser = "0.102.0"
nu-protocol = "0.102.0"
nu-std = "0.102.0"
proptest = "1.6.0"
