[package]
name = "bradis"
authors = ["Brad Dunbar <dunbarb2@gmail.com>"]
description = "Brad is"
edition = "2024"
license = "MIT"
rust-version = "1.85.0"
version = "0.1.0"
resolver = "2"

[lib]
doctest = false

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
arrayvec = "0.7"
bytes = "1.10"
futures = "0.3"
hashbrown = "0.15"
logos = "0.15"
ordered-float = "4"
piccolo = "0.3"
rand = "0.8"
respite = "0.3.9"
seq-macro = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
triomphe = "0.1"
web-time = "1.1.0"

[features]
default = ["tokio-runtime"]
tokio-runtime = [
  "tokio/rt-multi-thread",
  "tokio/time",
]

[dependencies.tokio]
version = "1"
features = [
  "macros",
  "sync",
]

[dev-dependencies]
miette = { version = "7.5.0", features = ["fancy"] }
nu-cli = "0.102.0"
nu-cmd-extra = "0.102.0"
nu-cmd-lang = "0.102.0"
nu-command = "0.102.0"
nu-engine = "0.102.0"
nu-parser = "0.102.0"
nu-protocol = "0.102.0"
nu-std = "0.102.0"
proptest = "1.6.0"
