[package]
name = "bradis"
authors = ["Brad Dunbar <dunbarb2@gmail.com>"]
description = "Brad is"
edition = "2024"
license = "MIT"
rust-version = "1.85.0"
version = "0.1.0"
resolver = "2"

[lib]
doctest = false

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
arrayvec = "0.7"
bytes = "1.10"
futures = "0.3"
hashbrown = "0.15"
logos = "0.15"
ordered-float = "4"
piccolo = "0.3"
rand = "0.8"
respite = "0.3.9"
seq-macro = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
triomphe = "0.1"
web-time = "1.1.0"

[features]
default = ["tokio-runtime"]
tokio-runtime = [
  "tokio/rt-multi-thread",
  "tokio/time",
]

[dependencies.tokio]
version = "1"
features = [
  "macros",
  "sync",
]

[dev-dependencies]
miette = { version = "7.5.0", features = ["fancy"] }
nu-cli = "0.106.1"
nu-cmd-extra = "0.106.1"
nu-cmd-lang = "0.106.1"
nu-command = "0.106.1"
nu-engine = "0.106.1"
nu-parser = "0.106.1"
nu-protocol = "0.106.1"
nu-std = "0.106.1"
proptest = "1.6.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
cast_abs_to_unsigned = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_ptr_alignment = "deny"
cast_sign_loss = "deny"
cast_slice_different_sizes = "deny"
cast_slice_from_raw_parts = "deny"
dbg_macro = "deny"
enum_glob_use = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
